test/css/theme-default.css
/** theme-default.css --- Default theme
 *
 * Copyright (C) 2014 Diffeo
 *
 * Author: Miguel Guedes <miguel@miguelguedes.org>
 *
 * Comments:
 *
 * 
 */

/* HTML tags */
BODY {
  font: 15px Helvetica, Arial, sans-serif;
}


/* Sorting Desk */
#wrapper-outer {
  width: 1000px;
  margin: auto;
}

.wrapper {
  border: 4px solid #DFDED5;
  border-radius: 10px;
  width: 480px;
  display: none;
}

#wrapper-items {
  float: left;
}

#wrapper-bins {
  float: right;
}

#items, #bins {
  margin: 10px;
  height: 600px;
  overflow: auto;
  position: relative;
}

.wrapper-primary-bin-outer {
  padding-bottom: 20px;
  margin-bottom: 20px;
  border-bottom: 2px dashed silver;
  clear: both;
}

.wrapper-primary-bin:not(:first-child) {
  margin-top: 25px !important;
}

.bin-primary {
  position: relative;
  border: 4px solid #7582C9;
  background-color: #D0DDFF;
  color: #5C7CCA;
  border-radius: 8px;
  padding: 15px;
  margin-right: 2px;
  text-align: center;
  font-size: 20px;
  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.75);
  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
  transition: background-color 175ms, color 100ms;
}

.bin-primary:hover {
  background-color: #A9BEF3;
  color: #F2F6FF;
  cursor: pointer;
  transition: background-color 175ms, color 100ms;
}

.bin-primary:active, .bin-primary.assign {
  position: relative;
  top: 3px;
  left: 3px;
  box-shadow: none;
  transition: background-color 175ms, color 100ms;
}

.bin-primary-sub {
  position: relative;
  margin: 10px 0;
  border: 2px solid #6ABEF7;
  background-color: #E0F2FF;
  color: #5779AC;
  border-radius: 6px;
  padding: 10px;
  text-align: center;
  width: 200px;
  float: right;
  margin-right: 2px;
  font-size: 16px;
  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.75);
  text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
  transition: background-color 175ms, color 100ms;
}

.bin-primary-sub:hover {
  background-color: #BEDFF7;
  color: #5D8DD4;
  cursor: pointer;
  transition: background-color 175ms, color 100ms;
}

.bin-primary-sub:active, .bin-primary-sub.assign {
  position: relative;
  top: 2px;
  left: 2px;
  box-shadow: none;
  transition: background-color 175ms, color 100ms;
}

.bin-primary-sub.left {
  float: left !important;
}

.bin-secondary {
  position: relative;
  margin: 10px 0;
  border: 2px solid #CEA756;
  background-color: #FFECD0;
  color: #CA7B56;
  border-radius: 5px;
  padding: 8px;
  text-align: center;
  width: 200px;
  float: right;
  margin-right: 2px;
  font-size: 14px;
  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.75);
  text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
  transition: background-color 175ms, color 100ms;
}

.bin-secondary.left {
  float: left !important;
}

.bin-secondary:hover {
  background-color: #EED5B2;
  color: #BE6A42;
  cursor: pointer;
  transition: background-color 175ms, color 100ms;
}

.bin-secondary:active, .bin-secondary.assign {
  position: relative;
  top: 2px;
  left: 2px;
  box-shadow: none;
  transition: background-color 175ms, color 100ms;
}

.bin-shortcut {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 15px;
  height: 15px;
  border-left: 1px solid silver;
  border-bottom: 1px solid silver;
  border-bottom-left-radius: 5px;
  font-size: 11px;
}

.bin-primary .bin-shortcut {
  border-color: #7582C9;
}

.bin-primary-sub .bin-shortcut {
  border-color: #6ABEF7;
}

.bin-secondary .bin-shortcut {
  border-color: #CEA756;
}

.text-item {
  margin: 5px;
  padding: 10px;
  background-color: #FFFFFA;
  border: 2px solid #E0E2B6;
  border-radius: 8px;
  color: #242922;
  text-align: justify;
  font-size: 14px;
  cursor: default;
}

.text-item:hover {
  background-color: #F8F8DD;
  color: #44573C;
}

.text-item:active {
  background-color: #FFF5F8;
  color: #7F8368;
}

.text-item.selected {
  border: 2px solid #8EB4DA;
}

.text-item.selected:hover {
  background-color: inherit;
}

.droppable {
  border-style: dashed;
}

.text-item.dragging {
  border-color: #eee !important;
  color: silver !important;
  background-color: inherit !important;
}

.droppable-highlight {
  border-style: dashed;
}

.droppable-hover {
  border-style: dotted;
}

.ui-draggable-dragging {
  cursor: inherit;
}

.button-add {
  position: relative;
  border: 2px solid #A2C5A6;
  background-color: #ECF8EA;
  clear: both;
  padding: 5px;
  margin: 15px auto 0 auto;
  font-size: 25px;
  color: green;
  font-weight: bold;
  width: 28px;
  text-align: center;
  border-radius: 19px;
  box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.75);
  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
  transition: background-color 175ms, color 100ms;
  cursor: pointer;
}

.button-add:hover {
/*  color: #67B285; */
  background-color: #DEF3DA;
  transition: background-color 175ms, color 100ms;
}

.button-add:active {
  top: 1px;
  left: 1px;
  box-shadow: none;
  transition: background-color 175ms, color 100ms;
}

